--- a/Cue/pubspec.yaml
+++ b/Cue/pubspec.yaml
@@ -27,8 +27,8 @@ dependencies:
   firebase_storage: ^7.0.0
   provider: ^4.3.2+3
   google_fonts: ^1.1.1
-  video_player: ^0.10.11+1
-  video_player_controls: ^2.1.9
+  video_player: ^1.0.1
+  # video_player_controls: ^2.1.9
   flutter_spinkit: ^4.1.2+1
   # it was good,,
   configurable_expansion_tile: ^1.0.0
@@ -39,6 +39,12 @@ dependencies:
   permission_handler: ^5.0.1 #dubbing recoder request
   audioplayers: ^0.17.4
   flutter_sound: ^7.5.3+1 #dubbing.dart
+  # neeko: ^0.0.10
+  neeko:
+    git:
+      url: https://github.com/Cue-dev/neeko.git
+      ref: master
+      
   flutter:
     sdk: flutter
 
