--- a/Cue/pubspec.yaml
+++ b/Cue/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
     - icons/섀도잉.png
     - icons/공유.png
     - icons/취소.png
+    - icons/라이브러리.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
