--- a/Cue/pubspec.yaml
+++ b/Cue/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   fluttertoast: ^7.1.6
   screen: ^0.0.5
   permission_handler: ^5.0.1 #dubbing recoder request
-  audioplayers: ^0.17.4
+  #audioplayers: ^0.17.4
   flutter_sound: ^7.5.3+1 #dubbing.dart
   # neeko: ^0.0.10
   neeko:
@@ -78,6 +78,7 @@ flutter:
     - icons/마이.png
     - icons/메뉴.png
     - icons/큐.png
+    - icons/큐_활성.png
     - icons/피드.png
     - icons/알림.png
     - icons/알림_유.png
