--- a/Cue/pubspec.yaml
+++ b/Cue/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   fluttertoast: ^7.1.6
   screen: ^0.0.5
   permission_handler: ^5.0.1 #dubbing recoder request
-  #audioplayers: ^0.17.4
+  audioplayers: ^0.17.4
   flutter_sound: ^7.5.3+1 #dubbing.dart
   # neeko: ^0.0.10
   flutter_search_bar: ^2.1.0
