--- a/Cue/pubspec.yaml
+++ b/Cue/pubspec.yaml
@@ -18,34 +18,34 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  firebase_core: ^0.7.0
-  firebase_auth: ^0.20.0+1
-  cloud_firestore: ^0.16.0
-  firebase_storage: ^7.0.0
-  provider: ^4.3.2+3
-  google_fonts: ^1.1.1
-  video_player: ^1.0.1
+  firebase_core: ^1.4.0
+  firebase_auth: ^3.0.1
+  cloud_firestore: ^2.4.0
+  firebase_storage: ^10.0.1
+  provider: ^5.0.0
+  google_fonts: ^2.1.0
+  video_player: ^2.1.12
   # video_player_controls: ^2.1.9
-  flutter_spinkit: ^4.1.2+1
+  flutter_spinkit: ^5.0.0
   # it was good,,
-  configurable_expansion_tile: ^1.0.0
-  camera: ^0.5.8+2
-  stop_watch_timer: ^0.7.0
-  fluttertoast: ^7.1.6
-  screen: ^0.0.5
-  permission_handler: ^5.0.1 #dubbing recoder request
-  audioplayers: ^0.17.4
-  flutter_sound: ^7.5.3+1 #dubbing.dart
-  animations: ^1.1.2
+  # configurable_expansion_tile: ^1.0.0
+  camera: ^0.8.1+7
+  stop_watch_timer: ^1.3.1
+  fluttertoast: ^8.0.7
+  # screen: ^0.0.5
+  permission_handler: ^8.1.4+2 #dubbing recoder request
+  # audioplayers: ^0.17.4
+  # flutter_sound: ^7.5.3+1 #dubbing.dart
+  animations: ^2.0.1
   # neeko: ^0.0.10
-  flutter_search_bar: ^2.1.0
-  neeko:
-    git:
-      url: https://github.com/Cue-dev/neeko.git
-      ref: master
+  flutter_search_bar: ^3.0.0-dev.1
+  # neeko:
+  #   git:
+  #     url: https://github.com/Cue-dev/neeko.git
+  #     ref: master
       
   flutter:
     sdk: flutter
@@ -53,7 +53,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
